--- a/ipec-frontend-page/src/assets/scss/_var.scss
+++ b/ipec-frontend-page/src/assets/scss/_var.scss
@@ -16,8 +16,14 @@ $limit-detail-title-color: #343a40;
 
 $limit-gray-bg-color: #f8f9fa;
 
-$balance-button-active:  linear-gradient(45deg, #2853FF 0%, #933EFE 100%);
+$balance-button-active: linear-gradient(45deg, #2853FF 0%, #933EFE 100%);
 
-$balance-button:1px solid #933efe;
+$balance-button: 1px solid #933efe;
 
-$balance-white:#fff;
+$balance-button-purple:1px solid #6248ff;
+$balance-border: 1px solid #6248ff;
+$balance-button-purple-bold: 2px solid #6248ff;
+$balance-color: #6248ff;
+$balance-a-active:#2853ff;
+$balance-white: #fff;
+$balance-orange: #f59f00;
