--- a/ipec-frontend-page/src/assets/scss/contrast.scss
+++ b/ipec-frontend-page/src/assets/scss/contrast.scss
@@ -1,5 +1,7 @@
 .contrast{
     padding-top:0.4rem;
+    min-width: 1140px;
+    margin:0 auto;
     .contrast_product{
         text-align: center;
         margin-bottom: 0.4rem;
@@ -18,12 +20,22 @@
                 background: #F5F5F5;
                 line-height: 0.46rem;
                 text-align: left;
+                position: relative;
                 span{
                     font-size: 0.16rem;
                     padding-left: 0.18rem;
+                    color: #495057;
+                }
+                .text{
+                    display: inline-block;  
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    max-width: 1.7rem;
                 }
                 .icon{
-                    float: right;
+                    position: absolute;
+                    right: 0;
                     color: red;
                     margin-right: 0.22rem;         
                     cursor: pointer;           
@@ -44,6 +56,7 @@
             box-sizing: border-box;
             height: 0.8rem;
             line-height: 0.8rem;
+            cursor: pointer;
             &.active{
                 border-bottom: 2px solid #6248FF;  
                 span{
@@ -59,13 +72,32 @@
             .icon{
                 margin: 0;
                 font-size: 0.32rem;
+                vertical-align: sub;
             }
         }
     }
     .Survey_data{
-        // padding: 0 0.7rem;
+        display: none;
         width: 11.4rem;
         margin: 0 auto;
+        padding-bottom: 0.6rem;
+        &.show{
+            display: block;
+        }
+        >.default{
+            padding-top: 0.632rem;
+            width: 4.15rem;
+            margin: 0 auto;
+            img{
+                width: 100%;
+            }
+            .tips{
+                margin-top: 0.344rem;
+                font-size: 16px;
+                color: #6B7177;
+                text-align: center;
+            }
+        }
         p{
             font-size: 0.18rem;
             color: #343A40;
@@ -76,11 +108,70 @@
             .icon{
                 font-size: 0.2rem;
                 color: #8a54be;
+                vertical-align: text-bottom;
+            }
+            img{
+                width: 0.16rem;
+                height: 0.16rem;
+                vertical-align: middle;
             }
         }
         table{
             width: 100%;
             text-align: center; 
+            box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+            &.koubei{
+                td{
+                    height: 1rem;
+                    line-height: 1rem; 
+                    border-left: none;
+                    border-right: none;
+                    width: 1.77rem;
+                    text-align: left;
+                    >div{
+                        float: left;
+                    }
+                    >.img{
+                        width: 0.4rem;
+                        height: 0.4rem; 
+                        border-radius: 0.06rem;
+                        margin-top: 0.3rem;
+                        img{
+                            width: 100%;
+                            height: 100%;
+                            margin: 0;
+                            float: left;
+                        }
+                    }
+                    >.detail{
+                        margin-left: 0.12rem; 
+                        height: 100%;
+                        padding-top: 0.28rem;
+                        box-sizing: border-box;
+                        span{
+                            display: block;
+                        }
+                        .first{
+                            font-size: 0.14rem;
+                            color: #6B7177;
+                            letter-spacing: 0;
+                            line-height: 0.24rem;
+                        }
+                        .last{
+                            margin-top: 1px;
+                            font-size: 0.2rem;
+                            line-height: 0.28rem;
+                            color: #FF6B6B;
+                            letter-spacing: 0;
+                        }
+                    }
+                }
+                td:first-child{ 
+                   width: 1.25rem; 
+                   padding-left: 0.2rem;
+                   text-align: left;
+                }
+            }
             th{
                 height: 0.48rem;
                 line-height: 0.48rem;
@@ -94,21 +185,111 @@
                 color: #343A40;
                 height: 1.1rem;
                 line-height: 1.1rem;
+                img{
+                    vertical-align: initial;
+                    margin-left: 0.04rem;
+                }
                 .icon{
                     font-size: 0.2rem;
                 }
             }
         }
-        .serche{
+        .search{
             width: 100%;
-            height: 4.72rem;
-            // background-color: #ccc;            
+            height: 4.72rem;  
+            background: #FFFFFF;
+            border: 1px solid #E5E5E5;   
+            position: relative;
+            box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+            &.search_land{
+                padding-top:0.9rem;
+                .echart-map{
+                    padding-right: 0.5rem;
+                    border-right:  1px solid #E5E5E5;
+                }
+                .echart-bar-special{
+                    padding-left: 0.5rem;
+                }
+            }
+            &.search300{
+                height: 3rem; 
+                .redar{
+                    height: 3rem;  
+                }
+            }
+            &.search330{
+                height: 3.30rem; 
+            }
+            &.search430{
+                height: 3.70rem; 
+            }
+            &.wordCloud{
+                height: 296px;
+            }
+            &.height324{
+                height: 3.24rem;
+            }
+            .date-select{
+                position: absolute;
+                right: 40px;
+                top: 33px;
+                z-index: 8888;
+                &.data-name{
+                    left: 40px;
+                }
+                span{                    
+                    font-size: 12px;
+                    color: #666666;
+                    display: inline-block;
+                    background: url("../images/ip_detail/ic_pitchon.svg") no-repeat left;
+                    text-indent: 0.2rem;
+                    cursor: pointer;
+                    margin-left: 14px;
+                    &.checked {
+                        background: url("../images/ip_detail/ic_pitchon_pr.svg") no-repeat left;
+                    }
+                }
+            }    
+        }
+        .search_line{
+            border: 1px solid #E5E5E5;   
+            box-shadow: 0 1px 4px 0 rgba(0,0,0,.1);
+            
+            >ul{
+                height: 48px;
+                line-height: 48px;
+                padding:0 20px;
+                list-style: none; 
+                margin: 0;
+                li{
+                    float: left;
+                    height: 48px;
+                    line-height: 48px;
+                    font-size: 14px;  
+                    color: #666666;
+                    padding-left: 0.15rem;
+                    padding-right: 0.15rem;
+                    position: relative;
+                    cursor: pointer;
+                    &.active{
+                        color: #6248FF;     
+                        border-bottom: 1px solid #6248FF;                    
+                    } 
+                }
+            }
+            .search{
+                border: none; 
+            }
         }
     }
 }
 
 @media (max-width: 1141px) {
-    .contrast .class_fication{
-        height: auto !important;
+    .contrast .class_fication .item{
+        width: 2.8rem;
     }
+  }
+
+  .displaynone{
+      display: none;
   }
