--- a/ipec-frontend-page/src/assets/scss/download.scss
+++ b/ipec-frontend-page/src/assets/scss/download.scss
@@ -29,7 +29,10 @@
         text-align: center;
         background-image: $balance-button-active;
         border-radius: 6px;
-        color: $balance-white;
+
+        a {
+          color: $balance-white;
+        }
       }
     }
   }
@@ -43,6 +46,27 @@
       padding: 0.1rem 0.25rem 0.1rem 0.15rem;
       line-height: 26px;
       margin: 0.15rem 0 0.25rem;
+
+      .download-list-top {
+        display: flex;
+        color: #6B7177;
+
+        .pull-left {
+          .iconfuxuankuangweixuanzhong:before {
+            color: #e5e5e5;
+            font-size: 0.2rem;
+            cursor: pointer;
+            margin-right: 0.3rem;
+          }
+        }
+
+        .clear {
+          color: #6b7177;
+          .iconlajitong {
+            margin-right: 0.1rem;
+          }
+        }
+      }
     }
   }
 }
