--- a/ipec-frontend-page/src/assets/scss/echart_bar.scss
+++ b/ipec-frontend-page/src/assets/scss/echart_bar.scss
@@ -34,6 +34,11 @@
   height: 100%;
   display: inline-block;
 }
+.echart-pie-hollow{
+  width: 40%;
+  height: 100%;
+  display: inline-block;
+}
 .echart-map{
   width: 49%;
   height:3.3rem;
