--- a/ipec-frontend-page/src/assets/scss/home.scss
+++ b/ipec-frontend-page/src/assets/scss/home.scss
@@ -11,7 +11,8 @@
   .content-container {
     display: flex;
     //width: 89%;
-    margin: 0 auto 0.8rem;
+    //margin: 0 auto 0.8rem;
+    margin: 0 auto 0.43rem;
     width: 11.4rem;
 
     .span-title {
@@ -19,10 +20,57 @@
       padding-bottom: 0.24rem;
     }
 
-    ul {
+    .ten-type {
       display: flex;
       width: 100%;
       margin-bottom: 0;
+      text-align: center;
+
+      li:nth-child(5n) {
+        margin-right: 0;
+      }
+
+      li {
+        font-size: 0;
+        margin: 0 0.2rem 0.2rem 0;
+
+
+        a {
+          display: flex;
+          width: 2.12rem;
+          height: 1.59rem;
+          list-style-type: none;
+          background-color: $balance-white;
+          border: 1px solid #ced4da;
+          border-radius: 4px;
+
+          img {
+            width: 0.8rem;
+            height: 0.8rem;
+            vertical-align: inherit;
+            margin: 0.24rem 0 0.1rem;
+          }
+
+          span {
+            font-size: 0.2rem;
+            color: #495057;
+            letter-spacing: 0;
+            height: 0.28rem;
+            line-height: 0.28rem;
+            margin: 0;
+          }
+
+
+        }
+
+      }
+    }
+
+    ul.product-case {
+      display: flex;
+      width: 100%;
+      margin-bottom: 0;
+
       li {
         display: flex;
         width: 3.66rem;
@@ -55,6 +103,7 @@
         }
       }
     }
+
 
     .ip-s {
       display: flex;
@@ -152,19 +201,59 @@
       .case-area {
         display: flex;
         background-color: $limit-gray-bg-color;
-        width: 3.66rem;
+        width: 3.6rem;
         border-radius: 4px;
 
         .case-img {
-          width: 3.66rem;
-          height: 2.44rem;
+          width: 3.6rem;
+          height: 2.4rem;
         }
 
         .case-text {
           display: flex;
-          padding: 0.15rem;
+          height: 1.2rem;
+          padding: .2rem 0.16rem;
           width: 100%;
 
+          /* .case-small-img {
+             width: 0.6rem;
+             height: 0.8rem;
+             background: #e5e5e5;
+             margin-right: 0.18rem;
+
+             img {
+               width: 0.6rem;
+               height: 0.8rem;
+               cursor: pointer;
+             }
+           }
+
+           .case-word {
+             .title {
+               font-size: 0.16rem;
+               color: #343A40;
+             }
+
+             .bottom-title {
+               font-size: 0.12rem;
+               color: #6b7171;
+               display: flex;
+
+               .count {
+                 font-size: 0.12rem;
+               }
+
+               .span-two {
+                 color: #adadad;
+
+                 i {
+                   color: #6b7171;
+                   font-style: normal;
+                 }
+               }
+             }
+           }
+ */
           .case-first-line {
             display: flex;
 
@@ -175,14 +264,15 @@
               letter-spacing: 0;
             }
 
-            a {
+            i {
               display: flex;
               padding: 5px 0.15rem 4px;
               border-radius: 0.14rem;
-              background-color: #9013fe;
+              background-color: $balance-color;
               text-align: center;
               font-size: 0.13rem;
               color: white;
+              font-style: normal;
             }
           }
 
@@ -205,7 +295,7 @@
 
     .swiper-container {
       width: 100%;
-      height: 3.3rem;
+      //height: 3.3rem;
       overflow: hidden;
       z-index: 0;
 
@@ -215,27 +305,35 @@
         .swipe-slide-custom {
           background-color: $limit-gray-bg-color;
           display: flex;
-          width: 3.66rem;
-          height: 3rem;
+          width: 2.7rem;
+          height: 3.36rem;
+          margin-bottom: 0.3rem;
+
+          img {
+            height: 2.7rem;
+            border-radius: 4px 4px 0 0;
+          }
 
           .cooperate-ip-last-line {
             display: flex;
             height: 0.56rem;
             padding: 0.16rem 0.2rem 0.18rem;
+            border-radius: 0 0 4px 4px;
 
             .cooperate-ip-text {
               font-size: 0.16rem;
               color: $limit-title-color;
             }
 
-            a {
+            i {
               display: flex;
               padding: 5px 0.15rem 4px;
               border-radius: 14px;
-              background-color: #9013fe;
+              background-color: $balance-color;
               text-align: center;
               font-size: 0.13rem;
               color: white;
+              font-style: normal;
             }
           }
         }
@@ -254,20 +352,25 @@
 
     .swipe-banner {
       position: relative;
-      width: 98%;
-      height: 0.96rem;
+      //width: 98%;
+      //height: 0.96rem;
+      width: 100%;
+      height: 2.1rem;
       overflow: hidden;
       z-index: 0;
 
       .swipe-slide-area {
         display: flex;
+        margin-bottom: 0.25rem;
 
         .swipe-slide-custom {
           display: flex;
 
           .swipe-item-img {
-            width: 1.73rem;
-            height: 0.6rem;
+            //width: 1.73rem;
+            //height: 0.6rem;
+            width: 2.7rem;
+            height: 0.8rem;
           }
         }
       }
@@ -281,19 +384,23 @@
     }
 
   }
-  .special-container{
-    margin-bottom: 0.36rem;
+
+  .special-container {
+    //margin-bottom: 0.36rem;
+    margin-bottom: 0.3rem;
     font-size: 0;
-    .swiper-container{
-      .swiper-pagination{
+
+    .swiper-container {
+      .swiper-pagination {
         margin-top: 0.24rem;
       }
     }
   }
+
   //.special-container:first-child{
   //  margin-top: -0.44rem;
   //}
-  .special-container:last-child{
+  .special-container:last-child {
     margin-bottom: 0.8rem;
   }
 }
